--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,7 +27,7 @@
   <section>
     <div class="row upper-header">
       <div class="col-lg-3">
-        <h2>Lilian Villa Silva</h2>
+        <h2>LILIAN VILLA SILVA</h2>
       </div>
       
       <div class="col-lg-3 link">
